--- a/jdbc-esazy/src/main/webapp/WEB-INF/web.xml
+++ b/jdbc-esazy/src/main/webapp/WEB-INF/web.xml
@@ -2,8 +2,8 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+
+  <!-- <display-name>Archetype Created Web Application</display-name>
   <filter-mapping>
     <filter-name>jdbcFilter</filter-name>
     <url-pattern>/*</url-pattern>
@@ -12,35 +12,41 @@
 <filter-mapping>
     <filter-name>cookieFilter</filter-name>
     <url-pattern>/*</url-pattern>
-</filter-mapping>
+</filter-mapping> -->
 
-<welcome-file-list>
+<!-- <welcome-file-list>
 
 <welcome-file>home</welcome-file>
 
 <welcome-file>index.html</welcome-file>
 
-</welcome-file-list>
-<servlet>
-  <servlet-name>jdbcFilter</servlet-name>
-  <servlet-class>com.gdu.k14pm.model.JDBCFilter</servlet-class>
-</servlet>
-<filter-mapping>
-  <filter-name>jdbcFilter</filter-name>
-  <url-pattern>/jdbc</url-pattern>
-</filter-mapping>
-<servlet>
+</welcome-file-list> -->
+<web-app>
+  <servlet>
+    <servlet-name>jdbcFilter</servlet-name>
+    <servlet-class>com.gdu.k14pm.model.JDBCFilter</servlet-class>
+  </servlet>
+  <filter-mapping>
+    <filter-name>jdbcFilter</filter-name>
+    <url-pattern>/jdbc</url-pattern>
+  </filter-mapping>
+<!-- <servlet>
   <servlet-name>cookieFilter</servlet-name>
   <servlet-class>com.gdu.k14pm.model.CookieFilter</servlet-class>
 </servlet>
 <filter-mapping>
   <filter-name>cookieFilter</filter-name>
   <url-pattern>/cookie</url-pattern>
-</filter-mapping>
-<welcome-file-list>
-  <welcome-file>home</welcome-file>
-  <welcome-file>productlist</welcome-file>
-</welcome-file-list>
+</filter-mapping> -->
+  <welcome-file-list>
+    <welcome-file>home</welcome-file>
+    <welcome-file>productlist</welcome-file>
+    <welcome-file>createproduct</welcome-file>
+    <welcome-file>editProduct</welcome-file>
+    <welcome-file>deleteProduct</welcome-file>
+    <welcome-file>userinfo</welcome-file>
+    <welcome-file>login</welcome-file>
+  </welcome-file-list>
 </web-app>
 <!-- <web-app>
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
